--- a/p5/main/index.html
+++ b/p5/main/index.html
@@ -8,6 +8,7 @@
     <script src="../p5.min.js"></script>
     <script src="../addons/p5.dom.min.js"></script>
     <script src="../addons/p5.sound.min.js"></script>
+    <script src="p5.play.js" type="text/javascript"></script>
     <script src="sketch.js"></script>
   </head>
   <body>
